<resources>
    <string name="app_name">Pikmin</string>
    <string name="label_familia">Familia</string>
    <string name="terrestre">Terrestre</string>
    <string name="acuatico">Acuático</string>
    <string name="aereo">Aéreo</string>
    <string name="label_descripcion">Descripción:</string>
    <string name="label_caracteristica1">Característica 1:</string>
    <string name="label_caracteristica2">Característica 2:</string>
    <string name="label_caracteristica3">Característica 3:</string>
    <string name="imagen_del_pikmin_seleccionado">Imagen del pikmin seleccionado</string>
    <string name="imagen_del_pikmin">Imagen del pikmin</string>
    <string name="se_ha_seleccionado_un_pikmin">Se ha seleccionado el pikmin: %s</string>
    <string name="bienvenido_al_mundo_pikmin">¡Bienvenido al mundo Pikmin!</string>
    <string name="acerca_de">Acerca de...</string>
    <string name="ajustes">Ajustes</string>
    <string name="desarrollado_por">Aplicación desarrollada por Francisco Gutiérrez Ruiz</string>
    <string name="ok">Aceptar</string>
    <string name="tema">Tema oscuro</string>
    <string name="idioma">Español</string>
    <string name="detalle_pikmin">Detalle Pikmin</string>
    <string name="empty_string" translatable="false"></string>
    <string name="bearded_amprat">Estaticán lanudo</string>
    <string name="blue_pikmin">Pikmin azul</string>
    <string name="bulborb">Bulbo</string>
    <string name="empress_bulblax">Bulbo emperatriz</string>
    <string name="glow_pikmin">Pikmin luminoso</string>
    <string name="ice_pikmin">Pikmin gélido</string>
    <string name="joustmite">Liendre astada</string>
    <string name="lumiknoll">Lumiloma</string>
    <string name="peckish_aristocrab">Cepucranco</string>
    <string name="puckering_blinnow">Comején acuático</string>
    <string name="puffy_blowhog">Verraco volador</string>
    <string name="purple_pikmin">Pikmin morado</string>
    <string name="pyroclasmic_slooch">Pirobabosa</string>
    <string name="red_pikmin">Pikmin rojo</string>
    <string name="rock_pikmin">Pikmin pétreo</string>
    <string name="skeeterskate">Acuatirador</string>
    <string name="skitter_leaf">Pisaátomos hoja</string>
    <string name="skutterchuck">Insecto noducristal</string>
    <string name="swooping_snitchbug">Moscardón ladrón</string>
    <string name="toady_bloyster">Berberéchido soplón</string>
    <string name="waddlepus">Burbujero</string>
    <string name="waterwraith">Espectro acuático</string>
    <string name="white_pikmin">Pikmin blanco</string>
    <string name="winged_pikmin">Pikmin alado</string>
    <string name="yellow_pikmin">Pikmin amarillo</string>
    <string name="fam_bearded_amprat">Estatidentios</string>
    <string name="fam_blue_pikmin">Pikmin</string>
    <string name="fam_bulborb">Gusarapérridos</string>
    <string name="fam_empress_bulblax">Gusarapérridos</string>
    <string name="fam_glow_pikmin">Desconocida</string>
    <string name="fam_ice_pikmin">Pikmin</string>
    <string name="fam_joustmite">Excavarópteros</string>
    <string name="fam_lumiknoll">Desconocida</string>
    <string name="fam_peckish_aristocrab">Cepucránquidos</string>
    <string name="fam_puckering_blinnow">Comejantes</string>
    <string name="fam_puffy_blowhog">Verracos</string>
    <string name="fam_purple_pikmin">Pikmin</string>
    <string name="fam_pyroclasmic_slooch">Babósidos</string>
    <string name="fam_red_pikmin">Pikmin</string>
    <string name="fam_rock_pikmin">Pikmin</string>
    <string name="fam_skeeterskate">Tiradores</string>
    <string name="fam_skitter_leaf">Pisaátomos</string>
    <string name="fam_skutterchuck">Nodúlidos</string>
    <string name="fam_swooping_snitchbug">Escarpánidos</string>
    <string name="fam_toady_bloyster">Molúsquidos</string>
    <string name="fam_waddlepus">Cefalopómpados</string>
    <string name="fam_waterwraith">Desconocida</string>
    <string name="fam_white_pikmin">Pikmin</string>
    <string name="fam_winged_pikmin">Pikmin</string>
    <string name="fam_yellow_pikmin">Pikmin</string>
    <string name="cn_bearded_amprat" translatable="false">Porcellus barbavolta</string>
    <string name="cn_blue_pikmin" translatable="false">Pikminidae caerula</string>
    <string name="cn_bulborb" translatable="false">Oculus kageyamii russus</string>
    <string name="cn_empress_bulblax" translatable="false">Oculus kageyamii matriarchia (hipertrofia, gravidez)</string>
    <string name="cn_glow_pikmin" translatable="false">Pikminidae supravelum</string>
    <string name="cn_ice_pikmin" translatable="false">Pikminidae habiglacius</string>
    <string name="cn_joustmite" translatable="false">Trilobitins reversa</string>
    <string name="cn_lumiknoll" translatable="false">Collux aeternium</string>
    <string name="cn_peckish_aristocrab" translatable="false">Brachyurices esurio</string>
    <string name="cn_puckering_blinnow" translatable="false">Narrolingus piscatum</string>
    <string name="cn_puffy_blowhog" translatable="false">Sus inflata</string>
    <string name="cn_purple_pikmin" translatable="false">Pikminidae yokozunum</string>
    <string name="cn_pyroclasmic_slooch" translatable="false">Sulucina vulcanis</string>
    <string name="cn_red_pikmin" translatable="false">Pikminidae rubrus</string>
    <string name="cn_rock_pikmin" translatable="false">Pikminidae habisaxum</string>
    <string name="cn_skeeterskate" translatable="false">Gerridus clavomacula</string>
    <string name="cn_skitter_leaf" translatable="false">Rus pseudoarbicans</string>
    <string name="cn_skutterchuck" translatable="false">Hierodeciderit crystallosum</string>
    <string name="cn_swooping_snitchbug" translatable="false">Scarpanica kesperens</string>
    <string name="cn_toady_bloyster" translatable="false">Molluschid minionicus</string>
    <string name="cn_waddlepus" translatable="false">Opisteuthidae iaciobulla</string>
    <string name="cn_waterwraith" translatable="false">Amphibio sapiens</string>
    <string name="cn_white_pikmin" translatable="false">Pikminidae venalbius</string>
    <string name="cn_winged_pikmin" translatable="false">Pikminidae volarosa</string>
    <string name="cn_yellow_pikmin" translatable="false">Pikminidae auribus</string>
    <string name="desc_bearded_amprat">Clase de ratón capaz de generar energía estática frotando los vellos de su barba. Además son mamíferos y, por lo tanto, bastante inusuales en este planeta. Es necesario realizar más investigaciones sobre estas criaturas dado que su mera existencia podría dar lugar al surgimiento de una taxonomía de fauna completamente nueva.</string>
    <string name="desc_blue_pikmin">Cuerpo de color azul y expresión facial indescifrable. A diferencia de la mayoría de las especies radiambulares, que no pueden respirar bajo el agua, los Pikmin azules cuentan con branquias que se confunden con una boca. Esas branquias les permiten sobrevivir en ecosistemas acuáticos y terrestres.</string>
    <string name="desc_bulborb">Tiene el abdomen escarlata salpicado de motas blancas. Sus hábitos son nocturnos, por lo que de día suelen encontrarse durmiendo. Si son despertados, intentarán engullir cualquier cosa que tengan enfrente. Hay una gran variedad de gusarapérridos, y se considera que están en la cima de la cadena alimenticia.</string>
    <string name="desc_empress_bulblax">Cuando se cumplen ciertas condiciones en el medioambiente, como la disminución repentina de las especies que les sirven de alimento, la hembra de mayor tamaño de los gusarapérridos de la zona asume el papel de matriarca del grupo. Como resultado, el ovisaco del gusarapérrido hembra se hincha hasta alcanzar enormes proporciones. En ese estado, los nuevos bulbos emperatrices producen un largo número de larvas.</string>
    <string name="desc_glow_pikmin">Cuerpo de color verde radiante. Al florecer la hoja que tienen en la cabeza, esta toma una forma de estrella. Tienen varias características que los distinguen de los otros tipos de Pikmin, una de ellas es que en vez de brotar de cebollas brotan de lumilomas que solo se encuentran en la noche y en regiones subterráneas.</string>
    <string name="desc_ice_pikmin">Pertenecen a un subtipo parasitario de Pikmin llamado Ermikmin. Obtienen y mantienen su cuerpo a través de un proceso que utiliza su núcleo de baja temperatura para generar constantemente hielo nuevo de la humedad del ambiente.</string>
    <string name="desc_joustmite">Poseen un caparazón duro que les protege la cabeza. Pero, si bien los ataques frontales no les causan daño, su parte trasera es muy vulnerable. Esta característica la distingue de la liendre zamacuca pinchosa, la primera especie de la familia que fue descubierta.</string>
    <string name="desc_lumiknoll">Actúan como nidos e incubadoras de los Pikmin luminosos. Solo aparecen durante la noche en lugares donde haya habido una cebolla durante el día. Su color verde radiante atrae a criaturas nocturnas.</string>
    <string name="desc_peckish_aristocrab">Son cangrejos anfibios con pinzas asimétricas. La pinza derecha de mayor tamaño puede regenerarse después de desprenderse al cambiar la piel, incluso después de haberse perdido por completo. Curiosamente, no solo su cuerpo se asemeja al de una cebolla, sino que también huelen similar a ella.</string>
    <string name="desc_puckering_blinnow">Muchos piensan que los comejenes acuáticos no están del todo desarrollados, dado que poseen ojos grandes y no tienen aletas. El hecho es que esa es la fisonomía normal en la especie adulta. Los comejenes acuáticos utilizan su larga aleta caudal para atacar de forma agresiva a su presa cuando ella ingresa al agua.</string>
    <string name="desc_puffy_blowhog">Utilizan el hidrógeno que generan internamente para inflar una vejiga flotatoria y así se mantienen en el aire. Expulsan aire a través de unos respiraderos.</string>
    <string name="desc_purple_pikmin">Cuerpo robusto y resistente. Son más fuertes y grandes que el resto de su especie. Pesan 10 veces más que cualquier otro Pikmin. Al igual que los Pikmin blancos, solo pueden nacer a partir de brotes rebotadores que solo se encuentran en regiones subterráneas, por lo que son considerados una especie única.</string>
    <string name="desc_pyroclasmic_slooch">Especie de gasterópodo terrestre que se protege a sí misma con llamas. En vez de tener un caparazón tradicional, están recubiertas de una mucosa inflamable. Si su llama se extingue les llevará más de un día y medio volver a encenderla.</string>
    <string name="desc_red_pikmin">Cuerpo de color escarlata y nariz puntiaguda. Además de los rasgos vegetales propios de su especie, presentan características animales como un fuerte espíritu combativo y un grado elevado de curiosidad. Tienen una gran capacidad de adaptación, pues no solo son resistentes al calor extremo, sino que también suelen habitar en una gran variedad de ecosistemas.</string>
    <string name="desc_rock_pikmin">Tipo de Pikmin parasitario llamado Ermikmin que toma como huésped una piedra y, de manera similar a una semilla que echa raíces a través de las grietas de una roca, las raíces del Pikmin penetran la piedra.</string>
    <string name="desc_skeeterskate">Patinan sobre el agua. Se alimentan de plancton que absorben, junto con el agua, a través de su boca en forma de tubo. Son territoriales y utilizan el agua como arma contra los pequeños insectos que se aproximan.</string>
    <string name="desc_skitter_leaf">Tipo de pisaátomo acuático que se protege de depredadores al confundirse con una hoja verde similar a la de los árboles de hojas anchas. Si bien no puede flotar, el pisaátomos hoja puede nadar con facilidad girando su cuerpo en el agua.</string>
</resources>